Fix multiple messages with overlapping bugs

--- a/src/styles/components/message.less
+++ b/src/styles/components/message.less
@@ -10,10 +10,11 @@
     left: 0;
 
     &-notice {
-        width: auto;
-        vertical-align: middle;
-        position: absolute;
-        left: 50%;
+        padding: 8px;
+        text-align: center;
+        &:first-child {
+          margin-top: -8px;
+        }
 
         &-close {
             position: absolute;
@@ -29,14 +30,13 @@
     }
 
     &-notice-content {
-        position: relative;
-        right: 50%;
+        display: inline-block;
+        pointer-events: all;
         padding: 8px 16px;
         //border: 1px solid @border-color-split;
         border-radius: @border-radius-small;
         box-shadow: @shadow-base;
         background: #fff;
-        display: block;
         &-text{
             display: inline-block;
         }
